[package]
name = "hbui"
version = "0.1.0"
authors = ["c0gent <nsan1129@gmail.com>"]

[dependencies]
serde = "1.0.55"
serde_derive = "1.0.55"
rand = "0.4.2"

[dependencies.hbbft]
version = "*"

# git = "https://github.com/poanetwork/hbbft"
# branch = "afck-queue"

# git = "https://github.com/c0gent/hbbft"
# branch = "c0gent-queue-experiments"

path = "../hbbft"

# features = ["serialization-protobuf"]